# isup

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo-readme.md  changelog.md  install.ps1  install.sh  making-sense.md  recipe.md  uninstall.sh
.github/workflows/: cross-platform-build.yml  release.yml
scripts/: install-autostart.sh  install-launch-agent.sh  notify.sh  test_notifications.sh  uninstall-autostart.sh  uninstall-launch-agent.sh
src/: main.rs  utils.rs
src/monitor/: commands.rs  db.rs  mod.rs  notifier.rs  service.rs
