[package]
name = "isup"
version = "1.0.0"
edition = "2021"
description = "checks whether a particular site/service/route is up or not."
authors = ["shivam"]
license = "MIT"
readme = "cargo-readme.md"
repository = "https://github.com/shivamhwp/isup"
homepage = "https://github.com/shivamhwp/isup"
keywords = ["cli", "network", "status", "monitoring", "uptime"]
categories = ["command-line-utilities", "network-programming"]
exclude = [".github", ".gitignore"]


[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
notify-rust = "4.11.5"
rusqlite = "0.34.0"
tokio = { version = "1.44.1", features = ["rt", "time", "sync", "macros", "io-util", "signal"] }
dirs = "6.0.0"
chrono = "0.4"

[profile.release]
codegen-units = 1
lto = true
