[package]
name = "isup"
version = "2.0.3"
edition = "2021"
description = "on-device monitoring. lightweight, instant and efficient."
authors = ["shivam"]
license = "MIT"
readme = "cargo-readme.md"
repository = "https://github.com/shivamhwp/isup"
homepage = "https://github.com/shivamhwp/isup"
keywords = ["cli", "network", "status", "monitoring", "uptime"]
categories = ["command-line-utilities", "network-programming"]
exclude = [".github", ".gitignore"]


[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0.75"
colored = "2.0.4"
rusqlite = { version = "0.30.0", features = ["bundled"] }
tokio = { version = "1.44.2", features = ["full"] }
dirs = "6.0.0"
chrono = "0.4.31"
notifica = "3.0.2"
terminal_size = "0.4.2"

[profile.release]
codegen-units = 1
lto = true
